Revision history for Ocsinventory::Agent

       * Add hyperthreading support in Linux/Archs/i386/CPU.pm
       * Fix bug #1312830
       * Update memconf command to last revision
       * Add new file to detect Oracle distro
       * Fix CPU.pm which couldn't retrieve multi socket processors
       * Fix regression (bug #1045356)
       * Fix a mistake in </MACADDR> tag in 6876.xml
       * Move lib/Ocsinventory/Oracle and lib/Ocsinventory/Apache directories in lib/Ocsinventory/agent/Modules directory
       * Fix a mistake in Hooks.pm which makes Download.pm and Snmp.pm not loaded by agent
       * Fix problem path of arch command 
       * Fix debug trace in CPU.pm
       * Fix a translation mistake in MacOSX agent French installer

2.1
       * Fix #bug 1272425 about status of libvirt virtual machines not reported
       * Fix blueprint about installation date in the report of the installed software
       * Fix blueprint about UUID value in the hardware Table
       * Fix Bug #1247190 about default gateway as gateway for all interfaces under Linux
       * Add new screen code for edid (PTS)
       * Add new module to retrieve Nvidia cards
       * Add new module to retrieve virtual machines on vmware workstation
       * Return corrected values for storage under Fedora 19
       * Fix Bug #1247190 about default gateway as gateway for all interfaces under Linux
       * Add new screen code for edid (PTS)
       * Add new module to retrieve Nvidia cards
       * Add new file to detect CentOS distro
       * Add new module to retrieve virtual machines on vmware workstation
       * Return corrected values for storage under Fedora 19
       * Fix Bug #1206514 about enhancing modules loading to allow directories
       * Fix a bug in Common.pm about processes data marked as virtualmachines data
       * Fix Bug #1216935 about Mac user agent not generating UUID
       * Fix Bug #1237682 about RPM.pm INSTALLDATE format not always accepted by MySQL