@@ -11,8 +11,8 @@ sub run {
   my $common = $params->{common};
   my @ip;
   foreach (`ifconfig`){
-    if(/^\s*inet\s*(\S+)\s*netmask/){
-    #if(/^\s*inet add?r\s*:\s*(\S+)/ || /^\s*inet\s+(\S+)/){
+    #if(/^\s*inet\s*(\S+)\s*netmask/){
+    if(/^\s*inet add?r\s*:\s*(\S+)/ || /^\s*inet\s+(\S+)/){
       ($1=~/127.+/)?next:push @ip, $1
     };
   }
